Kubernetes/01-Network_Policy/netflix-majnu-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: majnu-pod
  labels:
    type: tondu
    height: 4feet
    weight: 40kg
spec:
  containers:
    - name: netflix-container
      image: devopsinsiders/netflix-clone

      ports:
        - containerPort: 80
