Kubernetes/01-Network_Policy/add-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: villen-np
spec:
  podSelector:
    matchLabels:
      type: tondu
